--- a/index.html
+++ b/index.html
@@ -8,15 +8,21 @@
     <link rel="stylesheet" href="./styles.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200;300;400;600;700;800&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap"
       rel="stylesheet"
     />
+
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
 
-    <script src="./app.js" defer></script>
+    <script defer src="./app.js"></script>
+    <script
+      defer
+      src="https://kit.fontawesome.com/3f69667618.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <div class="body-wrapper">
@@ -29,12 +35,16 @@
 
       <div class="menu-container">
         <div class="add-btn-container">
-          <a href="#lists"><button class="addBtn">+ Add New List</button></a>
-          <div class="lists">
-            <ul class="list-items" data-list-item>
-              <li class="list-item">Dummy Item</li>
-            </ul>
-          </div>
+          <a href="#lists">
+            <button class="addBtn">
+              <i class="fas fa-plus"></i> Add New List
+            </button>
+          </a>
+        </div>
+        <div class="lists">
+          <ul class="list-items" data-list-item>
+            <li class="list-item">Dummy Item</li>
+          </ul>
         </div>
       </div>
 
