--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="add-btn-container">
           <a href="#lists">
             <button class="addBtn">
-              <i class="fas fa-plus"></i> Add New List
+              <i class="fas fa-plus fa-lg"></i> Add New List
             </button>
           </a>
         </div>
