optimized getSelectedListInfo function, added delete functionality and styling of todos, optimized css

--- a/index.html
+++ b/index.html
@@ -4,41 +4,27 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>To Do App</title>
+    <title>MY TODO APP</title>
     <link rel="stylesheet" href="./styles.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap" rel="stylesheet" />
 
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 
     <script defer src="./app.js"></script>
-    <script
-      defer
-      src="https://kit.fontawesome.com/3f69667618.js"
-      crossorigin="anonymous"
-    ></script>
+    <script defer src="https://kit.fontawesome.com/3f69667618.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <div class="body-wrapper">
       <div class="heading">
-        <a href="index.html"><p class="title">To Do App</p></a>
-        <p class="description">
-          This is the description of the app! Awesome app!
-        </p>
+        <a href="index.html"><p class="title">TODO DUDE</p></a>
+        <p class="description">This is the description of the app! Awesome app!</p>
       </div>
 
       <div class="menu-container">
         <div class="add-btn-container">
           <a href="#lists">
-            <button class="addBtn">
-              <i class="fas fa-plus fa-lg"></i> Add New List
-            </button>
+            <button class="addBtn"><i class="fas fa-plus fa-lg"></i> Add New List</button>
           </a>
         </div>
         <div class="lists">
@@ -52,14 +38,10 @@
         <div class="section">
           <p>Login or signup to continue</p>
           <div class="ctaBtn">
-            <a href="#signup">
-              <button class="signupbtn" id="signupbtn">Signup</button></a
-            >
+            <a href="#signup"> <button class="signupbtn" id="signupbtn">Signup</button></a>
 
             <div class="ctaBtn"></div>
-            <a href="#login">
-              <button class="loginbtn" id="loginbtn">Login</button></a
-            >
+            <a href="#login"> <button class="loginbtn" id="loginbtn">Login</button></a>
           </div>
         </div>
       </div>
