--- a/todo.html
+++ b/todo.html
@@ -1,7 +1,16 @@
 <div class="section todos">
+  <div class="list-info-container">
+    <p class="list-name">Test Name</p>
+    <p class="list-id">Test ID</p>
+  </div>
+
+  <hr class="horizontal-divider" />
+
   <form class="form" action="javascript:;">
-    <label for="todo">Now, add some todo's to your list</label>
+    <label for="todo">Add some todo's to your list</label>
     <input type="text" id="todo" name="todo" required /><br /><br />
   </form>
-  <ul class="todo-items" id="todo-items"></ul>
+  <div class="todo-container">
+    <ul class="todo-items" id="todo-items"></ul>
+  </div>
 </div>
