--- a/lists.html
+++ b/lists.html
@@ -2,6 +2,6 @@
   <form class="form" action="javascript:;">
     <label for="list">Name of your list</label>
     <input type="text" id="list" name="list" required /><br /><br />
-    <input type="submit" id="submit" value="Add New List" />
+    <input type="submit" id="submit" value="CREATE LIST" />
   </form>
 </div>
