--- a/dashboard.html
+++ b/dashboard.html
@@ -1,3 +1,3 @@
 <div class="section dashboard">
-  <p class="welcome-message"></p>
+  <p class="welcome-message">Welcome to your dashboard</p>
 </div>
