--- a/login.html
+++ b/login.html
@@ -5,6 +5,6 @@
     <input type="text" id="username" name="username" required /><br /><br />
     <label for="pass">Password:</label>
     <input type="password" id="password" name="password" required /><br /><br />
-    <input type="submit" value="Submit" />
+    <input type="submit" value="LOGIN" />
   </form>
 </div>
