--- a/lists.html
+++ b/lists.html
@@ -1,6 +1,6 @@
 <div class="section list">
   <form class="form" action="javascript:;">
-    <label for="list">Name of your list</label>
+    <label for="list">Name of your list:</label>
     <input type="text" id="list" name="list" required /><br /><br />
     <input type="submit" id="submit" value="CREATE LIST" />
   </form>
