added user logout implementation

--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
         <p class="description">Plan your life with us!</p>
       </div>
 
+      <div class="logout-btn-container">
+        <p class="logout-btn">Logout</p>
+      </div>
+
       <div class="menu-container">
         <div class="add-btn-container">
           <a href="#lists">
