--- a/index.html
+++ b/index.html
@@ -32,9 +32,7 @@
           </a>
         </div>
         <div class="lists">
-          <ul class="list-items" data-list-item>
-            <li class="list-item">Dummy Item</li>
-          </ul>
+          <ul class="list-items" data-list-item></ul>
         </div>
       </div>
 
@@ -54,7 +52,6 @@
           </div>
         </div>
       </div>
-      <div class="error"></div>
     </div>
   </body>
 </html>
