added user account update feature

--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
         <p class="description">Plan your life with us!</p>
       </div>
 
+      <div class="settings-btn-container">
+        <i class="fas fa-cog fa-lg"></i>
+      </div>
+
       <div class="logout-btn-container">
         <p class="logout-btn">Logout</p>
       </div>
