added filter implementation for todo items

--- a/settings.html
+++ b/settings.html
@@ -1,5 +1,5 @@
 <div class="section signupform">
-  <p class="text">Account Info</p>
+  <p class="section-header">Account Info</p>
 
   <form class="form" id="form" action="javascript:;" novalidate>
     <label for="fname">First name:</label>
