Added Filter implementation for todo items

--- a/lists.html
+++ b/lists.html
@@ -1,7 +1,7 @@
 <div class="section list">
-  <form class="form" action="javascript:;">
-    <label for="list">Name of your list:</label>
-    <input type="text" id="list" name="list" required /><br /><br />
+  <form class="new-list-form" action="javascript:;">
+    <label for="list">Enter name of your LIST:</label>
+    <input type="text" id="list" name="list" required />
     <input type="submit" id="submit" value="CREATE LIST" />
   </form>
 </div>
