--- a/signup.html
+++ b/signup.html
@@ -1,5 +1,5 @@
 <div class="section signupform">
-  <p class="text">Sign-up TODAY!</p>
+  <p class="section-header">Sign-up TODAY!</p>
 
   <form class="form" id="form" action="javascript:;" novalidate>
     <label for="fname">First name:</label>
