--- a/index.html
+++ b/index.html
@@ -21,13 +21,15 @@
         <p class="description">Plan your life with us!</p>
       </div>
 
-      <div class="settings-btn-container">
-        <i class="fas fa-cog fa-lg"></i>
-      </div>
+      <nav class="top-right-nav">
+        <div class="settings-btn-container">
+          <i class="btn-settings fas fa-cog fa-lg"></i>
+        </div>
 
-      <div class="logout-btn-container">
-        <p class="logout-btn">Logout</p>
-      </div>
+        <div class="logout-btn-container">
+          <p class="logout-btn">Logout</p>
+        </div>
+      </nav>
 
       <div class="menu-container">
         <div class="add-btn-container">
@@ -42,11 +44,6 @@
 
       <div class="main-content">
         <div class="section">
-          <svg class="icon-lock" viewbox="0 0 24 24">
-            <path
-              d="M17,10h-1V8c0-2.205-1.794-4-4-4S8,5.795,8,8v2H7c-1.103,0-2,0.896-2,2v7c0,1.104,0.897,2,2,2h10c1.103,0,2-0.896,2-2v-7  C19,10.896,18.103,10,17,10z M12,18.299c-0.719,0-1.3-0.58-1.3-1.299s0.581-1.301,1.3-1.301s1.3,0.582,1.3,1.301  S12.719,18.299,12,18.299z M14,11h-4V8c0-1.104,0.897-2,2-2s2,0.896,2,2V11z"
-            />
-          </svg>
           <p>Login or signup to continue</p>
           <div class="ctaBtn">
             <a href="#signup"> <button class="signupbtn" id="signupbtn">Signup</button></a>
