--- a/login.html
+++ b/login.html
@@ -1,10 +1,10 @@
 <div class="section authentification">
-  <div class="text"><p>Login to your account</p></div>
-  <form class="form" action="javascript:;">
+  <div class="section-header"><p>Login to your account</p></div>
+  <form class="login-form" action="javascript:;">
     <label for="username">E-mail:</label>
-    <input type="text" id="username" name="username" required /><br /><br />
+    <input type="text" id="username" name="username" required />
     <label for="pass">Password:</label>
-    <input type="password" id="password" name="password" required /><br /><br />
+    <input type="password" id="password" name="password" required />
     <input type="submit" value="LOGIN" />
   </form>
 </div>
