--- a/todo.html
+++ b/todo.html
@@ -12,18 +12,23 @@
   <hr class="horizontal-divider" />
 
   <div class="form-container">
-    <form class="form" action="javascript:;">
+    <form class="todo-form" action="javascript:;">
       <label for="todo">Add some todo's to your list</label>
       <div class="add-todo-form-group">
         <input class="new-todo-input" type="text" id="todo" name="todo" placeholder="Enter a todo name" required />
-        <i class="todoaddicon fas fa-plus fa-lg"></i><br /><br />
+        <i class="todoaddicon fas fa-plus fa-lg"></i>
       </div>
     </form>
   </div>
 
   <hr class="horizontal-divider" />
-
-  <div class="todo-container">
-    <ul class="todo-items" id="todo-items"></ul>
+  <p class="todo-header">Todos (<span class="todo-count">0</span>)</p>
+  <div class="todo-filters">
+    <button class="filter selected">All</button>
+    <button class="filter">Incomplete</button>
+    <button class="filter">Completed</button>
+    <i class="fas fa-filter"></i>
   </div>
+
+  <ul class="todo-items" id="todo-items"></ul>
 </div>
