updated UI component styles

--- a/lists.html
+++ b/lists.html
@@ -1,7 +1,11 @@
 <div class="section list">
+  <div class="round-icon-container">
+    <i class="list-icon far fa-clipboard"></i>
+  </div>
+
   <form class="new-list-form" action="javascript:;">
-    <label for="list">Enter name of your LIST:</label>
+    <label for="list">Enter a new LIST name:</label>
     <input type="text" id="list" name="list" required />
-    <input type="submit" id="submit" value="CREATE LIST" />
+    <input class="submit-btn" type="submit" id="submit" value="CREATE LIST" />
   </form>
 </div>
