--- a/todo.html
+++ b/todo.html
@@ -24,7 +24,7 @@
   <hr class="horizontal-divider" />
   <p class="todo-header">Todos (<span class="todo-count">0</span>)</p>
   <div class="todo-filters">
-    <button class="filter selected">All</button>
+    <button class="filter filter-selected">All</button>
     <button class="filter">Incomplete</button>
     <button class="filter">Completed</button>
     <i class="fas fa-filter"></i>
