--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MY TODO APP</title>
     <link rel="stylesheet" href="./styles.css" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;600;700;800&display=swap" rel="stylesheet" />
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 
@@ -17,8 +18,8 @@
   <body>
     <div class="body-wrapper">
       <div class="heading">
-        <a href="index.html"><p class="title">TODO DUDE</p></a>
-        <p class="description">Plan your life with us!</p>
+        <a href="index.html"><p class="title">TODUDE</p></a>
+        <p class="description">Your Personal Goal Wingman</p>
       </div>
 
       <nav class="top-right-nav">
@@ -43,13 +44,22 @@
       </div>
 
       <div class="main-content">
-        <div class="section">
-          <p>Login or signup to continue</p>
-          <div class="ctaBtn">
-            <a href="#signup"> <button class="signupbtn" id="signupbtn">Signup</button></a>
+        <div class="section authentification">
+          <div class="section-header"><p>Login to your account</p></div>
+          <hr class="horizontal-divider" />
+          <form class="login-form" action="javascript:;">
+            <label class="form-label" for="username">E-mail Adrress:</label>
+            <input type="text" id="username" name="username" />
+            <small class="error username-error-message">Error message</small>
+            <label class="form-label" for="pass">Password:</label>
+            <input type="password" id="password" name="password" />
+            <small class="error password-error-message">Error message</small>
+            <input type="submit" value="LOGIN" />
+          </form>
 
-            <div class="ctaBtn"></div>
-            <a href="#login"> <button class="loginbtn" id="loginbtn">Login</button></a>
+          <div class="registration-prompt">
+            <p>Don't have an account?</p>
+            <span class="signupbtn">Sign-up Here</span>
           </div>
         </div>
       </div>
