--- a/settings.html
+++ b/settings.html
@@ -2,16 +2,16 @@
   <p class="section-header">Account Info</p>
 
   <form class="form" id="form" action="javascript:;" novalidate>
-    <label for="fname">First name:</label>
+    <label class="form-label" for="fname">First name:</label>
     <input type="text" id="fname" name="firstname" required />
     <small class="error firstname-error-message">Error message</small>
-    <label for="lname">Last Name:</label>
+    <label class="form-label" for="lname">Last Name:</label>
     <input type="text" id="lname" name="lastname" required />
     <small class="error lastname-error-message">Error message</small>
-    <label for="email">E-mail Address:</label>
+    <label class="form-label" for="email">E-mail Address:</label>
     <input type="email" id="email" name="email" required />
     <small class="error email-error-message">Error message</small>
-    <label for="pass">Password:</label>
+    <label class="form-label" for="pass">Password:</label>
     <input type="password" id="pass" name="password" required />
     <small class="error password-error-message">Error message</small>
     <input type="submit" value="Save & Update" />
