Optimized Todo rendering functions, Improved UX and accessibility, Styling

--- a/signup.html
+++ b/signup.html
@@ -1,17 +1,18 @@
 <div class="section signupform">
   <p class="section-header">Sign-up TODAY!</p>
+  <hr />
 
   <form class="form" id="form" action="javascript:;" novalidate>
-    <label for="fname">First name:</label>
+    <label class="form-label" for="fname">First name:</label>
     <input type="text" id="fname" name="firstname" required />
     <small class="error firstname-error-message">Error message</small>
-    <label for="lname">Last Name:</label>
+    <label class="form-label" for="lname">Last Name:</label>
     <input type="text" id="lname" name="lastname" required />
     <small class="error lastname-error-message">Error message</small>
-    <label for="email">E-mail Address:</label>
+    <label class="form-label" for="email">E-mail Address:</label>
     <input type="email" id="email" name="email" required />
     <small class="error email-error-message">Error message</small>
-    <label for="pass">Password:</label>
+    <label class="form-label" for="pass">Password:</label>
     <input type="password" id="pass" name="password" required />
     <small class="error password-error-message">Error message</small>
     <div class="checkbox-wrapper">
