Optimized Login/Signup form validation

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MY TODO APP</title>
+    <title>TODUDE App</title>
     <link rel="stylesheet" href="./styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -49,8 +49,8 @@
           <hr class="horizontal-divider" />
           <form class="login-form" action="javascript:;">
             <label class="form-label" for="username">E-mail Adrress:</label>
-            <input type="text" id="username" name="username" />
-            <small class="error username-error-message">Error message</small>
+            <input type="text" id="email" name="email" />
+            <small class="error email-error-message">Error message</small>
             <label class="form-label" for="pass">Password:</label>
             <input type="password" id="password" name="password" />
             <small class="error password-error-message">Error message</small>
@@ -58,7 +58,7 @@
           </form>
 
           <div class="registration-prompt">
-            <p>Don't have an account?</p>
+            <p class="account-prompt">Don't have an account?</p>
             <span class="signupbtn">Sign-up Here</span>
           </div>
         </div>
