--- a/lists.html
+++ b/lists.html
@@ -4,7 +4,7 @@
   </div>
 
   <form class="new-list-form" action="javascript:;">
-    <label for="list">Enter a new LIST name:</label>
+    <label class="form-label" for="list">Enter a new LIST name:</label>
     <input type="text" id="list" name="list" required />
     <input class="submit-btn" type="submit" id="submit" value="CREATE LIST" />
   </form>
