--- a/login.html
+++ b/login.html
@@ -1,17 +1,18 @@
 <div class="section authentification">
   <div class="section-header"><p>Login to your account</p></div>
+  <hr class="horizontal-divider" />
   <form class="login-form" action="javascript:;">
-    <label class="form-label" for="username">E-mail:</label>
-    <input type="text" id="username" name="username" required />
-    <small class="error username-error-message">Error message</small>
-    <label class="form-label" for="password">Password:</label>
-    <input type="password" id="password" name="password" required />
+    <label class="form-label" for="username">E-mail Adrress:</label>
+    <input type="text" id="email" name="email" />
+    <small class="error email-error-message">Error message</small>
+    <label class="form-label" for="pass">Password:</label>
+    <input type="password" id="password" name="password" />
     <small class="error password-error-message">Error message</small>
     <input type="submit" value="LOGIN" />
   </form>
 
   <div class="registration-prompt">
-    <p>Don't have an account?</p>
-    <button class="signupBtn">Sign-up Here</button>
+    <p class="account-prompt">Don't have an account?</p>
+    <span class="signupbtn">Sign-up Here</span>
   </div>
 </div>
