implemented confirmation for list deletion

--- a/todo.html
+++ b/todo.html
@@ -33,3 +33,12 @@
     <ul class="todo-items" id="todo-items"></ul>
   </div>
 </div>
+
+<div class="deletelist-confirmation-container">
+  <p class="delete-confirmation-text">Are you sure you want to delete this list?</p>
+  <p class="delete-confirmation-warning">WARNING! This operation cannot be reversed.</p>
+  <div class="delete-confirmation-buttons-container">
+    <button class="delete-confirmation-buttons confirm">YES</button>
+    <button class="delete-confirmation-buttons cancel">CANCEL</button>
+  </div>
+</div>
