added user access control + UI Improvements

--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
           <hr class="horizontal-divider" />
           <form class="login-form" action="javascript:;">
             <label class="form-label" for="username">E-mail Adrress:</label>
-            <input type="text" id="email" name="email" />
+            <input type="text" id="email" name="email" placeholder="awesome_user@domain.com" />
             <small class="error email-error-message">Error message</small>
             <label class="form-label" for="pass">Password:</label>
-            <input type="password" id="password" name="password" />
+            <input type="password" id="password" name="password" placeholder="******" />
             <small class="error password-error-message">Error message</small>
             <input type="submit" value="LOGIN" />
           </form>
