--- a/signup.html
+++ b/signup.html
@@ -1,8 +1,8 @@
 <div class="section signupform">
   <p class="section-header">Sign-up TODAY!</p>
-  <hr />
+  <hr class="horizontal-divider" />
 
-  <form class="form" id="form" action="javascript:;" novalidate>
+  <form class="form signupform" id="form" action="javascript:;" novalidate>
     <label class="form-label" for="fname">First name:</label>
     <input type="text" id="fname" name="firstname" required />
     <small class="error firstname-error-message">Error message</small>
@@ -18,8 +18,13 @@
     <div class="checkbox-wrapper">
       <input type="checkbox" id="check" name="check" hidden />
       <label class="custom-checkbox" for="check"></label>
-      <p class="term-agreement">I agree to the Terms & Conditions & Privacy Policy</p>
+      <p class="term-agreement">I agree to the Terms & Conditions</p>
     </div>
     <input type="submit" value="Submit" />
   </form>
+
+  <div class="login-prompt">
+    <p class="account-prompt">Already have an account?</p>
+    <span class="signupbtn">Login Here</span>
+  </div>
 </div>
