--- a/todo.html
+++ b/todo.html
@@ -16,7 +16,9 @@
       <label class="form-label" for="todo">Add some todo's to your list</label>
       <div class="add-todo-form-group">
         <input class="new-todo-input" type="text" id="todo" name="todo" placeholder="Enter a todo item" required />
-        <i class="todoaddicon fas fa-plus fa-lg"></i>
+        <div class="todoaddicon-container">
+          <i class="todoaddicon fas fa-plus fa-lg"></i>
+        </div>
       </div>
     </form>
   </div>
