added error handling for duplicate list name entries

--- a/lists.html
+++ b/lists.html
@@ -6,6 +6,7 @@
   <form class="new-list-form" action="javascript:;">
     <label class="form-label" for="list">Enter a new LIST name:</label>
     <input type="text" id="list" name="list" required />
+    <small class="list-name-error"></small>
     <input class="submit-btn" type="submit" id="submit" value="CREATE LIST" />
   </form>
 </div>
