--- a/signup.html
+++ b/signup.html
@@ -2,7 +2,7 @@
   <p class="section-header">Sign-up TODAY!</p>
   <hr class="horizontal-divider" />
 
-  <form class="form signupform" id="form" action="javascript:;" novalidate>
+  <form class="form" id="form" action="javascript:;" novalidate>
     <label class="form-label" for="fname">First name:</label>
     <input type="text" id="fname" name="firstname" required />
     <small class="error firstname-error-message">Error message</small>
@@ -25,6 +25,6 @@
 
   <div class="login-prompt">
     <p class="account-prompt">Already have an account?</p>
-    <span class="signupbtn">Login Here</span>
+    <span class="loginbtn">Login Here</span>
   </div>
 </div>
